src/test/ui/traits/trait-object-vs-lifetime-2.stderr
error[E0224]: at least one non-builtin trait is required for an object type
  --> $DIR/trait-object-vs-lifetime-2.rs:19:5
   |
LL |     'static +: 'static + Copy,
   |     ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0224`.
